# FMP3-TECS-Rust

./: .gitmodules  LICENSE.md  README.md
c_rust_bridge/: bridge.cdl
evaluation/section_4_B/tecs_can_sample/tecsrustCAN/: Cargo.toml
evaluation/section_4_B/tecs_can_sample/tecsrustCAN/src/: kernel_cfg.rs  lib.rs  tecs_signature.rs  x_can.rs
evaluation/section_4_B/tecs_can_sample/tecsrustCAN/src/tecs_celltype/: t_can.rs  t_dummy_can_taskbody.rs  t_loop_taskbody.rs  t_task_rs.rs
evaluation/section_4_B/tecs_can_sample/tecsrustCAN/src/tecs_impl/: t_can_impl.rs  t_can_taskbody_impl.rs  t_dummy_can_taskbody_impl.rs  t_loop_taskbody_impl.rs
evaluation/section_4_B/tecs_can_sample/tecsrustCAN/src/tecs_signature/: s_can_measure_for_opt.rs
evaluation/section_4_E/tecs_api_dispatch/tr_api_dispatch/: Cargo.toml
evaluation/section_4_E/tecs_api_dispatch/tr_api_dispatch/.cargo/: config.toml
evaluation/section_4_E/tecs_api_dispatch/tr_api_dispatch/src/tecs_celltype/: t_loop_taskbody.rs  t_measure.rs  t_task_rs.rs
evaluation/section_4_E/tecs_api_dispatch/tr_api_dispatch/src/tecs_impl/: t_semaphore_rs_impl.rs
evaluation/section_4_E/tecs_api_measure/tr_api_measure/: Cargo.toml
evaluation/section_4_E/tecs_api_measure/tr_api_measure/src/: kernel_cfg.rs  lib.rs  tecs_celltype.rs
evaluation/section_4_E/tecs_api_measure/tr_api_measure/src/tecs_celltype/: t_task_rs.rs
evaluation/section_4_E/tecs_api_measure/tr_api_measure/src/tecs_impl/: t_measure_impl.rs  t_task_rs_impl.rs
rust_api_dispatch/: Makefile  cfg1_out.c  cfg1_out.db  cfg1_out.elf  cfg1_out.srec  cfg2_out.db  (+6 more)
(+795 files in other folders)
