[package]
name = "tecsrustCAN"
version = "0.1.0"
edition = "2024"

[dependencies]
itron = { version = "= 0.1.9", features = ["fmp3", "nightly", "unstable"] }

[features]
default = ["send"]
# Local feature flags used with #[cfg(feature = "...")]
send = []
receive = []

[lib]
name = "itron"
crate-type = ["staticlib"]
